--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_easyrefresh: ^2.1.6
-  google_fonts:
-  event_bus:
-  webview_flutter:
-  dio:
-  dio_http_cache:
-  flutter_svg:
-  html:
+  google_fonts: ^1.1.1
+  event_bus: ^1.1.1
+  webview_flutter: ^1.0.7
+  dio: ^3.0.10
+  dio_http_cache: ^0.2.11
+  flutter_svg: ^0.18.0
+  html: ^0.14.0+4
+  path_provider: ^1.6.24
+  sqflite: ^1.3.2+1
 
 dev_dependencies:
   flutter_test:
