--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dio_http_cache: ^0.2.11
   flutter_svg: ^0.19.0
   html: ^0.14.0+4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
